@@ -1,3 +1,8 @@
+2005-01-17  Kazu Hirata  <kazu@cs.umass.edu>
+
+	* tree-ssa-dom.c (tree_ssa_dominator_optimize): Don't call
+	mark_dfs_back_edges.
+
 2005-01-16  Daniel Berlin  <dberlin@dberlin.org>
 
 	* tree-ssa-pre.c (add_to_sets): s1 may be NULL.
